--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/ql_kitucxa?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC"
+    url: "jdbc:mysql://localhost:3306/ql_kitucxa"
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 1234567
+    password: root
 
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
