--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
