--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     url: "jdbc:mysql://localhost:3306/ql_kitucxa"
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 1234567
+    password: root
 
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
