--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "pdfmake": "^0.2.18",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
