--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "antd": "^5.24.4",
     "axios": "^1.8.3",
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "moment": "^2.30.1",
     "pdfmake": "^0.2.18",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.2.0",
