--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
-    "@types/pdfmake": "^0.2.11"
+    "@types/pdfmake": "^0.2.11",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "prettier": "^3.5.3"
   }
 }
